optimiz and two reducer inc and wit

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,23 @@
 .headerMain {
   display: flex;
-  background: darksalmon;
+  justify-content: space-between;
+  align-items: center;
+  background: #fa8072;
+  padding: 0 40px;
+}
+.logo a {
+  color: #fff;
 }
 .list {
   display: flex;
+  /* align-items: stretch; */
+}
+.item {
+  /* align-items: stretch; */
+}
+.link {
+  display: block;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 2px;
 }
