--- a/src/pages/BalancePage/BalancePage.module.css
+++ b/src/pages/BalancePage/BalancePage.module.css
@@ -7,11 +7,20 @@
   text-align: center;
   text-transform: uppercase;
   margin: 0 0 20px 0;
+  font-family: "MontserratRegular", sans-serif;
+  letter-spacing: 0.1em;
 }
 .list {
   display: flex;
   justify-content: center;
 }
+.item {
+  font-family: "MontserratRegular", sans-serif;
+  letter-spacing: 0.1em;
+}
 .item:not(:last-child) {
   margin: 0 60px 0 0;
+}
+.itemBar:not(:last-child) {
+  margin: 0 0 50px 0;
 }
