--- a/src/pages/IncomePage/IncomePage.module.css
+++ b/src/pages/IncomePage/IncomePage.module.css
@@ -7,4 +7,6 @@
   text-align: center;
   text-transform: uppercase;
   margin: 0 0 20px 0;
+  font-family: "MontserratRegular", sans-serif;
+  letter-spacing: 0.1em;
 }
