--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,6 +10,6 @@
   color: #fff;
   text-transform: uppercase;
   text-align: center;
-  font-family: "MontserratRegular", sans-serif;
+  font-family: 'MontserratRegular', sans-serif;
   letter-spacing: 0.1em;
 }
