--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,7 +7,7 @@
 }
 .logo a {
   color: #fff;
-  font-family: "MontserratRegular", sans-serif;
+  font-family: 'MontserratRegular', sans-serif;
   letter-spacing: 0.1em;
 }
 .list {
@@ -22,7 +22,7 @@
   color: #fff;
   padding: 4px 10px;
   border-radius: 6px;
-  font-family: "MontserratRegular", sans-serif;
+  font-family: 'MontserratRegular', sans-serif;
   letter-spacing: 0.1em;
 }
 .link:focus,
