--- a/src/pages/IncomePage/IncomePage.module.css
+++ b/src/pages/IncomePage/IncomePage.module.css
@@ -3,10 +3,17 @@
   min-height: calc(100vh - 95px);
   background-color: ghostwhite;
 }
+.container {
+  padding: 0 20px;
+}
 .title {
   text-align: center;
   text-transform: uppercase;
   margin: 0 0 20px 0;
-  font-family: "MontserratRegular", sans-serif;
+  font-family: 'MontserratRegular', sans-serif;
   letter-spacing: 0.1em;
+}
+.toggleButton {
+  font-size: 22px;
+  padding: 14px 24px;
 }
