--- a/src/stylesheet/main.css
+++ b/src/stylesheet/main.css
@@ -1,5 +1,5 @@
-@import "./libs/normalize.css";
-@import "./fonts.css";
+@import './libs/normalize.css';
+@import './fonts.css';
 html {
   box-sizing: border-box;
 }
